apps/vaultwarden/components/istio/istio-virtualservice.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  name: "vaultwarden"
spec:
  hosts:
    - "vaultwarden"
  gateways:
    - "istio-system/gateway"
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: "vaultwarden"
            port:
              number: 80
